Avances en Flappy

--- a/Flappy/Assembly-CSharp.csproj
+++ b/Flappy/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Bird.cs" />
+    <Compile Include="Assets\Script\GameController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/EstebanChavezVerdin/Flappy/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
